--- a/front/users/create_user.html
+++ b/front/users/create_user.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <form name="NewUserForm" action="http://localhost/market/back/users/create_user.php" method="post">
-        <label>First Name:</label><br> <input type="text" name="f_name" placeholder="Tom" required> <br>
-        <label>Last name:</label> <br> <input type="text" name="l_name" placeholder="Mcalister" required> <br>
+        <label>First Name:</label><br> <input type="text" name="first_name" placeholder="Tom" required> <br>
+        <label>Last name:</label> <br> <input type="text" name="last_name" placeholder="Mcalister" required> <br>
         <label>Email</label> <br> <input type="email" name="email" placeholder="example@email.com" required> <br>
-        <label>Password</label><br> <input type="password" name="passwd" placeholder="********" required> <br>
+        <label>Password</label><br> <input type="password" name="password" placeholder="********" required> <br>
         <input type="submit" value="Sign Up">
     </form>
 </body>
